mysql/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
  - name: http
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
  #clusterIP: None
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        #traefik.enable: "true"
        #traefik.tcp.routers.mysql-service.entrypoints: "mysql"
        #traefik.tcp.routers.mysql-service.rule: HostSNI('db.dev.local')
        #traefik.tcp.services.mysql-service.loadbalancer.server.port: "3306"
        #traefik.tcp.routers.mysql-service.tls: "true"
    spec:
      containers:
      - image: mysql:8.3.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
